# Automated-Planning

./: Dokerfile-humble  README.md
problem1/: domain.pddl  problem1.pddl  problem2.pddl  test.sh
problem2/: domain.pddl  problem1.pddl  problem2.pddl  test.sh
problem3/: domain.hddl  problem.hddl  test.sh
problem4/: domain.pddl  problem.pddl  test.sh
problem5/: CMakeLists.txt  package.xml  tmux_session.sh
problem5/launch/: commands  problem5_launch.py
problem5/pddl/: domain.pddl
problem5/src/: activate_antivibration_action_node.cpp  cool_artifact_action_node.cpp  deliver_to_stasis_action_node.cpp  drop_at_cryo_action_node.cpp  drop_at_pod_action_node.cpp  move_action_node.cpp  pick_from_cryo_action_node.cpp  pick_from_pod_action_node.cpp  pick_hall_alpha_action_node.cpp  pick_hall_beta_action_node.cpp  seal_action_node.cpp  stabilize_action_node.cpp  unseal_action_node.cpp
